...
                      if (catalog == Catalog.tv &&
                          (catalogDetail.numberOfSeasons > 0 ||
                              catalogDetail.numberOfEpisodes > 0))
                        Column(
                          crossAxisAlignment: CrossAxisAlignment.start,
                          children: [
                            Text('Seasons & Episodes', style: kHeading6),
                            SizedBox(height: 8),
                            Row(
                              children: [
                                Icon(Icons.calendar_today, size: 16),
                                SizedBox(width: 4),
                                Text(
...
